# Changelog

## [x.x.x] - xxxx-xx-xx
## Changed

## Added
- Licensed under the LGPL
- Scratch / temporary directory can be set independantly of the storage directory
- Compression and encryption can be toggled on and off independantly
- Intermediate steps in compression and encryption can be deleted after each step
  instead of waiting until the end of the process.
- Added ability to disable automatic deletion of old archives (so the user can
  manage multiple cycles of backup archives manually, if desired)
- Script can now report errors and warnings through stderr
- A missing predecessor archive will trigger a warning. If another zfs-dr scratch
  directory exists, the warning will indicate that a previous run may still be in
  progress. If there are no other scratch directories present, the warning will
  indicate that the user should examine the situation and manually re-export the
  relevant snapshots as needed.
- Added a prerequisite check to be sure dependencies are available

## Fixed
- Script previously assumed that a missing immediate predecessor snapshot indicated
  a need to use a higher-tier snapshot as a base, instead of checking for an earlier
  predecessor snapshot. (Example, if weekly2 was missing, previous versions would
  export weekly3 based off the monthly, instead of exporting based off weekly1.)
- Did not check whether snapshots had been exported to archival.


## [0.1.0] - 2017-11-17
## Added
- Initial production version 